# Raahi

./: .env  .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  ISSUES_TO_FIX.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  raahi_city_skyline.html  requirements.txt
.agents/: design.md
backend/: __init__.py  main.py
backend/database/: __init__.py  connection.py  extensions.py  models.py
backend/pdf_export_service/: package-lock.json  package.json
backend/routes/: __init__.py  admin_routes.py  api_routes.py  auth_routes.py  ml_routes.py  web_routes.py
backend/services/: __init__.py  admin_service.py  air_quality_service.py  auth_service.py  bus_fare_service.py  home_service.py  ml_advisory_service.py  ml_service.py  notification_service.py  profile_service.py  route_planner_service.py  trip_service.py
backend/utils/: __init__.py  paths.py
config/: postgres_setup.md  settings.py
frontend/static/: app.js  chart_helpers.js  style.css
frontend/templates/: admin.html  auth.html  base.html  home.html  location_permission.html  map_navigation.html  profile.html  raahi_city_skyline.html  route_planner.html  welcome.html
raahi_ml/: __init__.py
raahi_ml/config/: __init__.py  ml_config.py  paths.py
scripts/: cleanup_database.py  cleanup_orphaned_trips.py  delete_admin_trips.py  delete_user.py  fix_postgres_permissions.py  init.sql  migrate_to_postgres.py  setup_postgres.py  simple_db_viewer.py  simple_postgres_setup.py  test_api_key.py  test_google_apis.py  test_google_apis_fixed.py  view_postgres_db.py
tests/: test_basic.py
(+51 files in other folders)
